# SinusoidalBLDCDriver---ROS

./: CMakeLists.txt  README.md  package.xml
launch/: motordriver.launch
nodes/: hiddriver.py  motordriver.py
